inserite immmagini nella cartella

--- a/MIlestone 1/index.html
+++ b/MIlestone 1/index.html
@@ -13,6 +13,8 @@
         <div class="main_container">
             <div class="col-left">
                 <div class="top left">
+                    <img src="img/avatar_io.jpg" alt="">
+                    <span>blalalalalal</span>
 
                 </div>
             </div>
