--- a/MIlestone 2/index.html
+++ b/MIlestone 2/index.html
@@ -47,6 +47,8 @@
 
                 </div>
                 <div class="message-container">
+                    <!-- per leggere le informazione dell'elemento correttemente attivo faccio un v-for sul contatto attivo nell'html -->
+                    <!-- <div v-for="message in conctacts[active].messages" class="message sent"></div> -->
                     <div class="message sent">
 
                     </div>
