--- a/MIlestone 1/index.html
+++ b/MIlestone 1/index.html
@@ -16,8 +16,16 @@
                 <div class="main_container">
                     <div class="col-left">
                         <div class="top left">
-                            <img src="img/avatar_io.jpg" alt="avatar_io">
-                            <span class="user-text">blalalalalal</span>
+                            <div class="user-container">
+                                <img src="img/avatar_io.jpg" alt="avatar_io">
+                                <span class="user self">Nome Utente</span>
+                            </div>
+                            <div class="user top-icons">
+                                <i class="fas fa-circle-notch"></i>
+                                <i class="fas fa-comment-alt"></i>
+                                <i class="fas fa-ellipsis-v"></i>
+                            </div>
+                        
                         </div>
                         <div class="notifications">
                             <div class="bell">
@@ -45,10 +53,15 @@
                     </div>
                     <div class="col-right">
                         <div class="top right">
-                            <div class="active-contact">
+                            <div class="active-chat-user">
                                 <img src="img/avatar_io.jpg" alt="avatar_io">
-                            <span class="user-text">blalalalalal</span>
+                                <span class="user name">blalalalalal</span>
                             </div>
+                            <div class="active-chat top-icons">
+                                <i class="fas fa-search"></i>
+                                <i class="fas fa-ellipsis-v"></i>
+                                <i class="fas fa-paperclip"></i>
+                            </div>                               
                         </div>
                         <div class="message-container">
                             <div class="message sent">
