aggiunta funzione per cambiare contatto da visualizzare

--- a/MIlestone 1/index.html
+++ b/MIlestone 1/index.html
@@ -67,7 +67,7 @@
                             <div class="message sent">
                                 Ciao sono un messaggio inviato
                                 <div class="time">
-                                    28/03/2020 10:10:40
+                                    <!-- {{dataText}} -->
                                 </div>
                             </div>
                             <div class="message received">
